prevent overflow-x

--- a/src/Styles/Splash.css
+++ b/src/Styles/Splash.css
@@ -43,3 +43,7 @@
   font-weight: 800;
   text-align: center;
 }
+
+body {
+  overflow-x: hidden;
+}
